# artifacts

./: LICENSE  README.md
CLUSTER20-DeepClone/tensorflow_core/python/keras/optimizer_v2/: optimizer_v2.py
CLUSTER20-DeepClone/tmci/plugins/src/: SmartBackend.hpp
CLUSTER21-DeepClone/: README
CLUSTER21-DeepClone/callback/: ckpt_adv.py
CLUSTER21-DeepClone/tmci/plugins/src/: SmartBackend.cpp
EuroPar19-NetPredict/: README  seq2seq_predictor.py
SC22-VeloC-GPU/: README.md
SC22-VeloC-GPU/scripts/: README.md  config.cfg  io-measure.py  plot-scalability-graphs.py  plot-wait-graphs.py  uniform-run.sh  variable-run-scalability.sh  variable-run.sh
SC22-VeloC-GPU/veloc-gpu/: .gitignore  CMakeLists.txt  README.md
SC22-VeloC-GPU/veloc-gpu/include/: veloc.h  veloc.hpp
SC22-VeloC-GPU/veloc-gpu/include/veloc/: defs.h
SC22-VeloC-GPU/veloc-gpu/src/common/: debug.hpp  file_util.cpp  ipc_queue.hpp
SC22-VeloC-GPU/veloc-gpu/src/lib/: CMakeLists.txt  client.cpp  client.hpp  mem_region.cpp  mem_region.hpp  memory_cache.cpp  memory_cache.hpp  veloc.cpp
SC22-VeloC-GPU/veloc-gpu/src/modules/: CMakeLists.txt  module_manager.cpp  transfer_module.cpp
SC22-VeloC-GPU/veloc-gpu/test/: config.cfg  gpu-checkpoint.cu  sample-trace.csv  uniform-sizes.cu  variable-sizes.cu
